# workday

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  LICENSE  README.md  go.mod  go.sum  main.go  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: go-ci.yml  python-ci.yml  release.yml
cmd/: backfill.go  backfill_test.go  break.go  break_test.go  edit.go  end.go  export.go  init.go  input_test.go  migrate.go  note.go  note_edit.go  report.go  report_month.go  report_week.go  root.go  root_test.go  start.go  status.go  status_test.go  version.go
cmd/ui/: models.go  views.go
internal/: ioutils.go  ioutils_test.go  journal.go  journal_test.go  logger.go  utils.go  utils_test.go
internal/journal/: errors.go  errors_test.go  ioutils.go  ioutils_test.go  journal.go  journal_test.go  time_segment_test.go  utils.go  utils_additional_test.go  utils_test.go  validation.go  validation_test.go
internal/styles/: styles.go  styles_test.go
styles/: style.toml
tests/: conftest.py  test_core.py
workday/: core.py  exceptions.py  validations.py
