[tool.poetry]
name = "workday"
version = "0.1.0"
description = ""
authors = ["Robson Cruz <ghost0092@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
wemake-python-styleguide = "^0.17.0"
flake8-pytest-style = "^1.6.0"
mypy = "^0.991"
safety = "^2.3.1"
pre-commit = "^2.20.0"
nitpick = "^0.32.0"
black = {version = "^22.10.0", allow-prereleases = true}

[tool.nitpick]
style = [
  "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml",
  "styles/style.toml"
]

[tool.pytest.ini_options]
addopts = """
  --cov workday
  --cov-report term-missing --color=yes
  --cov-report html
  --cov-report xml
  --no-cov-on-fail
  --durations=10
  --doctest-modules
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
